# inmobiliaria-tray-app

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
DOCUMENTATION/: Drop folder.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  config.rs  lib.rs  main.rs  tray.rs  uploader.rs  watcher.rs
