[package]
name = "inmobiliaria-tray-app"
version = "0.1.0"
description = "Inmobiliaria Inbox - Tray app for automatic document upload"
authors = ["you"]
edition = "2021"

[lib]
name = "inmobiliaria_tray_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-mini = "0.6"
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
open = "5"
png = "0.17"
